# cyclonedds-idlc

./: Cargo.toml
src/: alignment.rs  ast.rs  basic_types.rs  lib.rs  type_trait.rs
src/c_generator/: alignment.rs  ast_c.rs  ast_h.rs  basic_types.rs  cyclonedds_meta.rs  mod.rs  type_impl.rs  type_trait.rs
src/c_generator/templates/: allocator_macro.txt
src/cdds/: alignment.rs  ast_c.rs  ast_h.rs  basic_types.rs  mod.rs  type_impl.rs  type_trait.rs
src/cdds/templates/: file_header.txt  h_file_footer.txt
src/templates/: use_cyclonedds.txt
testdata/: test.c  test.h  test.idl
