[package]
name = "cyclonedds-idlc"
version = "0.1.0"
authors = ["Sojan James <sojan.james@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtps-idl-grammar = "*"
pest = "^1.0"
pest_derive = "^1.0"
getopts = "0.2"
log = { version = "0.4", features = ["std", "serde"] }
linked-hash-map = "^0.5"
lazy_static = "1.4"



 [[bin]]
 name = "idlc"
 path = "src/bin/main.rs"

